fixed centering bug on mobile

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
 }
 
 a {
@@ -28,11 +27,10 @@ a:hover {
 
 .centered {
     text-align: center;
-
 }
 
 img { 
-    max-width: 150px    ;
+    max-width: 150px;
     height: auto;
-    margin: 0px 15px 15px 0px;
+    margin: 0px 15px 40px 0px;
 }
